[package]
name = "zom"
description = "A collection of zero, one or many elements."
version = "0.1.0"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
repository = "https://github.com/andrewhickman/zom"
documentation = "https://docs.rs/zom"
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]

[dev-dependencies]